major update: добавлены новые Exceptions, ExceprionHandler, убраны лишние try-catch, поправлены ограничения в Entity, и другие оптимизации и исправления.